// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applyFilter doesnt apply any filter when the cancel button is pressed 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "borderBottomColor": "lightgrey",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          Object {
            "color": "#2d3b44",
            "fontSize": 20,
            "fontWeight": "600",
          },
        ]
      }
    >
      All Grading Periods
    </Text>
    <TouchableOpacity
      accessibilityComponentType="button"
      accessibilityTraits="button"
      activeOpacity={0.2}
      onLongPress={undefined}
      onPress={[Function]}
      onPressIn={undefined}
      onPressOut={undefined}
      style={undefined}
      testID="assignment-list.filter"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ff0ee8",
              "fontSize": 14,
            },
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
            Object {
              "color": "#ff0ee8",
            },
            Object {
              "marginBottom": 1,
            },
          ]
        }
      >
        Filter
      </Text>
    </TouchableOpacity>
  </View>
  <RCTScrollView
    ItemSeparatorComponent={undefined}
    data={
      Array [
        Object {
          "assignments": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "data": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "id": 1,
          "key": 1,
          "name": "Learn React Native",
          "position": 1,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    isItemSticky={[Function]}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={true}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "assignments": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "data": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "id": 1,
          "key": 1,
          "name": "Learn React Native",
          "position": 1,
        },
      ]
    }
    shouldItemUpdate={[Function]}
    testID="assignment-list.list"
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "height": 24,
              "justifyContent": "center",
              "paddingLeft": 16,
              "paddingRight": 8,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "#F5F5F5",
                "color": "#73818C",
                "fontWeight": "600",
              }
            }
          >
            Learn React Native
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            style={
              Object {
                "borderBottomColor": "lightgrey",
                "borderBottomWidth": 0.5,
                "flex": 1,
              }
            }
          >
            <TouchableHighlight
              onPress={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
              testID="assignment-123456789"
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "padding": 12,
                    "paddingLeft": 3,
                  }
                }
              >
                <View />
                <View
                  accessibilityLabel="Not Published"
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 0,
                      "height": 32,
                      "width": 46,
                    }
                  }
                >
                  <Image
                    source={1}
                    style={
                      Array [
                        Object {
                          "position": "absolute",
                        },
                        Object {
                          "tintColor": undefined,
                        },
                      ]
                    }
                  />
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "white",
                        "borderRadius": 8,
                        "height": 16,
                        "justifyContent": "center",
                        "left": 20,
                        "position": "absolute",
                        "top": 10,
                        "width": 16,
                      }
                    }
                  >
                    <Image
                      source={1}
                      style={
                        Object {
                          "height": 12,
                          "tintColor": "#8B969E",
                          "width": 12,
                        }
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    numberOfLines={2}
                    style={
                      Object {
                        "color": "#2D3B45",
                        "flex": 1,
                        "fontSize": 16,
                        "fontWeight": "600",
                      }
                    }
                  >
                    learn to write code
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "#8B969E",
                        "fontSize": 14,
                        "marginTop": 2,
                      }
                    }
                  >
                    Due May 31, 2017 at 10:59 PM
                  </Text>
                  <View />
                </View>
              </View>
            </TouchableHighlight>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View />
</View>
`;

exports[`applyFilter will apply a new filter 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "borderBottomColor": "lightgrey",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          Object {
            "color": "#2d3b44",
            "fontSize": 20,
            "fontWeight": "600",
          },
        ]
      }
    >
      First Block
    </Text>
    <TouchableOpacity
      accessibilityComponentType="button"
      accessibilityTraits="button"
      activeOpacity={0.2}
      onLongPress={undefined}
      onPress={[Function]}
      onPressIn={undefined}
      onPressOut={undefined}
      style={undefined}
      testID="assignment-list.filter"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ff0ee8",
              "fontSize": 14,
            },
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
            Object {
              "color": "#ff0ee8",
            },
            Object {
              "marginBottom": 1,
            },
          ]
        }
      >
        Clear filter
      </Text>
    </TouchableOpacity>
  </View>
  <RCTScrollView
    ItemSeparatorComponent={undefined}
    data={
      Array [
        Object {
          "assignments": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 1,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "data": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 1,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "id": 1,
          "key": 1,
          "name": "Learn React Native",
          "position": 1,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    isItemSticky={[Function]}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={true}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "assignments": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 1,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "data": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 1,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "id": 1,
          "key": 1,
          "name": "Learn React Native",
          "position": 1,
        },
      ]
    }
    shouldItemUpdate={[Function]}
    testID="assignment-list.list"
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "height": 24,
              "justifyContent": "center",
              "paddingLeft": 16,
              "paddingRight": 8,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "#F5F5F5",
                "color": "#73818C",
                "fontWeight": "600",
              }
            }
          >
            Learn React Native
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            style={
              Object {
                "borderBottomColor": "lightgrey",
                "borderBottomWidth": 0.5,
                "flex": 1,
              }
            }
          >
            <TouchableHighlight
              onPress={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
              testID="assignment-1"
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "padding": 12,
                    "paddingLeft": 3,
                  }
                }
              >
                <View />
                <View
                  accessibilityLabel="Not Published"
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 0,
                      "height": 32,
                      "width": 46,
                    }
                  }
                >
                  <Image
                    source={1}
                    style={
                      Array [
                        Object {
                          "position": "absolute",
                        },
                        Object {
                          "tintColor": undefined,
                        },
                      ]
                    }
                  />
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "white",
                        "borderRadius": 8,
                        "height": 16,
                        "justifyContent": "center",
                        "left": 20,
                        "position": "absolute",
                        "top": 10,
                        "width": 16,
                      }
                    }
                  >
                    <Image
                      source={1}
                      style={
                        Object {
                          "height": 12,
                          "tintColor": "#8B969E",
                          "width": 12,
                        }
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    numberOfLines={2}
                    style={
                      Object {
                        "color": "#2D3B45",
                        "flex": 1,
                        "fontSize": 16,
                        "fontWeight": "600",
                      }
                    }
                  >
                    learn to write code
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "#8B969E",
                        "fontSize": 14,
                        "marginTop": 2,
                      }
                    }
                  >
                    Due May 31, 2017 at 10:59 PM
                  </Text>
                  <View />
                </View>
              </View>
            </TouchableHighlight>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View />
</View>
`;

exports[`filter button only shows when there are grading periods 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "borderBottomColor": "lightgrey",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          Object {
            "color": "#2d3b44",
            "fontSize": 20,
            "fontWeight": "600",
          },
        ]
      }
    >
      All Grading Periods
    </Text>
  </View>
  <RCTScrollView
    ItemSeparatorComponent={undefined}
    data={
      Array [
        Object {
          "assignments": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "data": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "id": 1,
          "key": 1,
          "name": "Learn React Native",
          "position": 1,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    isItemSticky={[Function]}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={true}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "assignments": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "data": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "id": 1,
          "key": 1,
          "name": "Learn React Native",
          "position": 1,
        },
      ]
    }
    shouldItemUpdate={[Function]}
    testID="assignment-list.list"
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "height": 24,
              "justifyContent": "center",
              "paddingLeft": 16,
              "paddingRight": 8,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "#F5F5F5",
                "color": "#73818C",
                "fontWeight": "600",
              }
            }
          >
            Learn React Native
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            style={
              Object {
                "borderBottomColor": "lightgrey",
                "borderBottomWidth": 0.5,
                "flex": 1,
              }
            }
          >
            <TouchableHighlight
              onPress={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
              testID="assignment-123456789"
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "padding": 12,
                    "paddingLeft": 3,
                  }
                }
              >
                <View />
                <View
                  accessibilityLabel="Not Published"
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 0,
                      "height": 32,
                      "width": 46,
                    }
                  }
                >
                  <Image
                    source={1}
                    style={
                      Array [
                        Object {
                          "position": "absolute",
                        },
                        Object {
                          "tintColor": undefined,
                        },
                      ]
                    }
                  />
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "white",
                        "borderRadius": 8,
                        "height": 16,
                        "justifyContent": "center",
                        "left": 20,
                        "position": "absolute",
                        "top": 10,
                        "width": 16,
                      }
                    }
                  >
                    <Image
                      source={1}
                      style={
                        Object {
                          "height": 12,
                          "tintColor": "#8B969E",
                          "width": 12,
                        }
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    numberOfLines={2}
                    style={
                      Object {
                        "color": "#2D3B45",
                        "flex": 1,
                        "fontSize": 16,
                        "fontWeight": "600",
                      }
                    }
                  >
                    learn to write code
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "#8B969E",
                        "fontSize": 14,
                        "marginTop": 2,
                      }
                    }
                  >
                    Due May 31, 2017 at 10:59 PM
                  </Text>
                  <View />
                </View>
              </View>
            </TouchableHighlight>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View />
</View>
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "borderBottomColor": "lightgrey",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          Object {
            "color": "#2d3b44",
            "fontSize": 20,
            "fontWeight": "600",
          },
        ]
      }
    >
      All Grading Periods
    </Text>
    <TouchableOpacity
      accessibilityComponentType="button"
      accessibilityTraits="button"
      activeOpacity={0.2}
      onLongPress={undefined}
      onPress={[Function]}
      onPressIn={undefined}
      onPressOut={undefined}
      style={undefined}
      testID="assignment-list.filter"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ff0ee8",
              "fontSize": 14,
            },
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
            Object {
              "color": "#ff0ee8",
            },
            Object {
              "marginBottom": 1,
            },
          ]
        }
      >
        Filter
      </Text>
    </TouchableOpacity>
  </View>
  <RCTScrollView
    ItemSeparatorComponent={undefined}
    data={
      Array [
        Object {
          "assignments": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "data": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "id": 1,
          "key": 1,
          "name": "Learn React Native",
          "position": 1,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    isItemSticky={[Function]}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={true}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "assignments": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "data": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "id": 1,
          "key": 1,
          "name": "Learn React Native",
          "position": 1,
        },
      ]
    }
    shouldItemUpdate={[Function]}
    testID="assignment-list.list"
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "height": 24,
              "justifyContent": "center",
              "paddingLeft": 16,
              "paddingRight": 8,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "#F5F5F5",
                "color": "#73818C",
                "fontWeight": "600",
              }
            }
          >
            Learn React Native
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            style={
              Object {
                "borderBottomColor": "lightgrey",
                "borderBottomWidth": 0.5,
                "flex": 1,
              }
            }
          >
            <TouchableHighlight
              onPress={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
              testID="assignment-123456789"
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "padding": 12,
                    "paddingLeft": 3,
                  }
                }
              >
                <View />
                <View
                  accessibilityLabel="Not Published"
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 0,
                      "height": 32,
                      "width": 46,
                    }
                  }
                >
                  <Image
                    source={1}
                    style={
                      Array [
                        Object {
                          "position": "absolute",
                        },
                        Object {
                          "tintColor": undefined,
                        },
                      ]
                    }
                  />
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "white",
                        "borderRadius": 8,
                        "height": 16,
                        "justifyContent": "center",
                        "left": 20,
                        "position": "absolute",
                        "top": 10,
                        "width": 16,
                      }
                    }
                  >
                    <Image
                      source={1}
                      style={
                        Object {
                          "height": 12,
                          "tintColor": "#8B969E",
                          "width": 12,
                        }
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    numberOfLines={2}
                    style={
                      Object {
                        "color": "#2D3B45",
                        "flex": 1,
                        "fontSize": 16,
                        "fontWeight": "600",
                      }
                    }
                  >
                    learn to write code
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "#8B969E",
                        "fontSize": 14,
                        "marginTop": 2,
                      }
                    }
                  >
                    Due May 31, 2017 at 10:59 PM
                  </Text>
                  <View />
                </View>
              </View>
            </TouchableHighlight>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View />
</View>
`;

exports[`selecting clear filter will remove any applied filters 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "borderBottomColor": "lightgrey",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          Object {
            "color": "#2d3b44",
            "fontSize": 20,
            "fontWeight": "600",
          },
        ]
      }
    >
      All Grading Periods
    </Text>
    <TouchableOpacity
      accessibilityComponentType="button"
      accessibilityTraits="button"
      activeOpacity={0.2}
      onLongPress={undefined}
      onPress={[Function]}
      onPressIn={undefined}
      onPressOut={undefined}
      style={undefined}
      testID="assignment-list.filter"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#ff0ee8",
              "fontSize": 14,
            },
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
            Object {
              "color": "#ff0ee8",
            },
            Object {
              "marginBottom": 1,
            },
          ]
        }
      >
        Filter
      </Text>
    </TouchableOpacity>
  </View>
  <RCTScrollView
    ItemSeparatorComponent={undefined}
    data={
      Array [
        Object {
          "assignments": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "data": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "id": 1,
          "key": 1,
          "name": "Learn React Native",
          "position": 1,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    isItemSticky={[Function]}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={true}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "assignments": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "data": Array [
            Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2017-06-01T05:59:00Z",
              "grading_type": "points",
              "html_url": "http://hostname.tld/whatever",
              "id": 123456789,
              "lock_at": "2017-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "updated_at": "2017-03-17T19:15:25Z",
            },
          ],
          "id": 1,
          "key": 1,
          "name": "Learn React Native",
          "position": 1,
        },
      ]
    }
    shouldItemUpdate={[Function]}
    testID="assignment-list.list"
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "height": 24,
              "justifyContent": "center",
              "paddingLeft": 16,
              "paddingRight": 8,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "#F5F5F5",
                "color": "#73818C",
                "fontWeight": "600",
              }
            }
          >
            Learn React Native
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            style={
              Object {
                "borderBottomColor": "lightgrey",
                "borderBottomWidth": 0.5,
                "flex": 1,
              }
            }
          >
            <TouchableHighlight
              onPress={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
              testID="assignment-123456789"
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "padding": 12,
                    "paddingLeft": 3,
                  }
                }
              >
                <View />
                <View
                  accessibilityLabel="Not Published"
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 0,
                      "height": 32,
                      "width": 46,
                    }
                  }
                >
                  <Image
                    source={1}
                    style={
                      Array [
                        Object {
                          "position": "absolute",
                        },
                        Object {
                          "tintColor": undefined,
                        },
                      ]
                    }
                  />
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "white",
                        "borderRadius": 8,
                        "height": 16,
                        "justifyContent": "center",
                        "left": 20,
                        "position": "absolute",
                        "top": 10,
                        "width": 16,
                      }
                    }
                  >
                    <Image
                      source={1}
                      style={
                        Object {
                          "height": 12,
                          "tintColor": "#8B969E",
                          "width": 12,
                        }
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    numberOfLines={2}
                    style={
                      Object {
                        "color": "#2D3B45",
                        "flex": 1,
                        "fontSize": 16,
                        "fontWeight": "600",
                      }
                    }
                  >
                    learn to write code
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "#8B969E",
                        "fontSize": 14,
                        "marginTop": 2,
                      }
                    }
                  >
                    Due May 31, 2017 at 10:59 PM
                  </Text>
                  <View />
                </View>
              </View>
            </TouchableHighlight>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
  <View />
</View>
`;
